Fixing up the stickies, getting ready to bring back backstretch

--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ html,body {
 
 #usStoryBox {
   left:10%;
-  top:780px;
+  top:760px;
   width:800px;
   height:300px;
 }
@@ -276,9 +276,9 @@ html,body {
 }
 
 #noteContainer {
-  position:static;
-  display:block;
-  border: thick solid yellow;
+  position:relative;
+  height:175px;
+  margin-top:40px;
 }
 
 .sticky {
@@ -289,7 +289,7 @@ html,body {
   width:300px;
   height:150px;
   color:#000;
-  background:#ffc;
+  background:#fcfccb;
   -moz-box-shadow:5px 5px 7px rgba(33,33,33,1);
   -webkit-box-shadow: 5px 5px 7px rgba(33,33,33,.7);
   box-shadow: 5px 5px 7px rgba(33,33,33,.7);
@@ -297,7 +297,6 @@ html,body {
 
 .sticky ul li {
   list-style: disc;
-  float: left;
   text-align: left;
 }
 
@@ -310,15 +309,28 @@ html,body {
 
 #listOfStuffToLeave {
   right:5%;
-  -webkit-transform: rotate(3deg);
-  -o-transform: rotate(3deg);
-  -moz-transform:rotate(3deg);
+  -webkit-transform: rotate(6deg);
+  -o-transform: rotate(6deg);
+  -moz-transform:rotate(6deg);
+}
+
+#mapAndInfo {
+  position:relative;
+  width:100%;
+  height:350px;
 }
 
 #googleMap {
 	height: 350px; 
-	width: 300px;
-	border: thick solid green;
+	width: 45%;
+	float:left;
+}
+
+#curiodysseyInfo {
+  position:absolute;
+  width:52%;
+  right:0px;
+  padding-top:20px;
 }
 
 /******************
